<resources>
    <string name="app_name">五子棋博弈</string>
    <string name="setting">设置:</string>
    <string name="set_model">人机模式选择</string>
    <string name="game_notes">对战记录</string>
    <string name="white_player">持白棋手</string>
    <string name="black_player">持黑棋手</string>
    <string name="computer">电脑</string>
    <string name="human">人类</string>
    <string name="computer_level">电脑等级: </string>
    <string name="give_up_text">您确定认输吗？</string>
    <string name="cancel">取消</string>
    <string name="determine">确定</string>
    <string name="return_and_check">返回查看</string>
    <string name="restart">重新开始</string>
    <string name="record_ps">点击记录可恢复对局棋盘</string>
    <string name="send_problem">反馈问题</string>
    <string name="feedback_hint_text">其输入您遇到的问题，尽可能详细，以及告诉我们你是怎么遇到的。</string>
    <string name="feedback">问题反馈</string>
    <string-array name="game_level">
        <item>入门学童</item>
        <item>小有研究</item>
        <item>登峰造极</item>
    </string-array>
</resources>
