<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/black_player"
        android:textColor="@android:color/white"
        android:textSize="8pt"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radio_ai_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/computer"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/black_level_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/computer_level"/>
            <Spinner
                android:id="@+id/black_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/game_level"/>
        </LinearLayout>

        <RadioButton
            android:id="@+id/radio_human_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/human"/>
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/white_player"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:layout_marginTop="30dp"
        android:textSize="8pt"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radio_ai_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/computer"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/white_level_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/computer_level"/>
            <Spinner
                android:id="@+id/white_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/game_level"/>
        </LinearLayout>
        <RadioButton
            android:id="@+id/radio_human_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/human"/>
    </RadioGroup>
</LinearLayout>