<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="250dp"
    android:background="@drawable/ic_dialog"
    android:orientation="vertical"
    android:paddingTop="10dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dialog_tittle_height"
        android:layout_gravity="center"
        android:src="@drawable/win_tittle" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/under_line_black" />

    <EditText
        android:id="@+id/feedback_edit_text"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/feedback_hint_text"
        android:textColorHint="@color/button_background" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/under_line_black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/dialog_button_height"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_frame"
            android:text="@string/cancel"
            android:textSize="@dimen/dialog_button_text" />

        <Button
            android:id="@+id/send_problem"
            android:layout_width="0dp"
            android:layout_height="@dimen/dialog_button_height"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_frame"
            android:text="@string/send_problem"
            android:textSize="@dimen/dialog_button_text" />
    </LinearLayout>
</LinearLayout>